# mount-encrypted-filesystem

./: .gitignore  LICENSE  README.md  pyproject.toml
mount_encrypted_filesystem/: __init__.py  batch.py  cli.py  config.py  mount.py
tests/: batch.yml  enc.kdbx  test_mount.py
tests/filesystems/cryfs/: cryfs.config
tests/filesystems/cryfs/DC5/: 60CC2CC7BE051F342592853CD2803
tests/filesystems/cryfs/EFA/: ABD3F8F39ED37CB4AA4B5867BAE8E
tests/filesystems/gocryptfs/: gocryptfs.conf  gocryptfs.diriv  pHlWKdvWdBBnkTUyHWw3Zw
tests/filesystems/gocryptfs_dec/: README.md
